# wgpu-triangle

./: .gitignore  Cargo.toml  README.md  app-20be0922e9c77b89.js  app-20be0922e9c77b89_bg.wasm  app-3d7206eb3e9f4042.js  app-b30549207054c45b.js  app-b30549207054c45b_bg.wasm  app-b93c223ddb2728c9.js  app-b93c223ddb2728c9_bg.wasm  app-dcd44cd47f2576fc.js  app-dcd44cd47f2576fc_bg.wasm  app-eaf1fd24788513f3.js  index.html  justfile
.github/workflows/: pages.yml  rust.yml
apps/app/: Cargo.toml  index.html
apps/app/src/: main.rs
apps/template/: Cargo.toml  index.html
apps/template/src/: main.rs
apps/triangle/: Cargo.toml  Trunk.toml  index.html
crates/engine/: Cargo.toml
crates/engine/src/: launch.rs  lib.rs  renderer.rs
crates/template/: Cargo.toml
crates/template/src/: lib.rs
